PP-13 fix: fix z-index property

--- a/pointing-poker/src/components/IssueCard/IssueCard.module.scss
+++ b/pointing-poker/src/components/IssueCard/IssueCard.module.scss
@@ -30,7 +30,7 @@
   color: grey;
 }
 .btnRemove {
-  z-index: 10;
+  z-index: 1;
   background-repeat: no-repeat;
   background-size: contain;
   width: 45px;
@@ -46,7 +46,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 4;
   &:hover {
     cursor: pointer;
     background-color: #60dabf;
